# llm-cost-aware-routing

./: .gitignore  LICENSE  README.md  pyproject.toml
experiments/: benchmark.py  benchmark_brutal.json  benchmark_full.json  results.json  results_expert.json  results_full.json  results_full44.json  results_hard.json  router_experiment.py  tasks.py
llmroute/: __init__.py  cli.py  config.py  engine.py  ollama_client.py  server.py
paper/: smart_llm_router.tex
vscode-extension/: README.md  extension.js  package.json
vscode-extension/media/: main.css  main.js
